Fix spacing and add new class for background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,7 @@ img {
   height: 100%;
   object-fit: cover;
 }
+
+.bg-super-dark {
+  background-color: black;
+}
